﻿25.9.3
======
 + Add the GOG Galaxy overlay back to SK's internal blacklist in OpenGL
     games since it destroys performance.

25.9.2
======
 + Slightly reduced render latency in VRR Optimized mode in D3D11 games,
     by ensuring all commands before SK draws its overlay are flushed in
       advance, and then again after SK draws its overlay before any
         third-party overlays draw theirs.

25.8.31
=======
 + Ignore Keyboard/Mouse Hooks installed by the GOG overlay.
 + Enumerate HID device files that SK's CreateFile{A|W} hooks miss after
     15 drawn frames instead of during initialization.
 + Apply platform detection to Local Injection also...

25.8.30.3
=========
 + Make the Ctrl+Shift+Backspace keybinding for toggling SK's Control Panel
     a standard configurable keybinding.

   * The binding can be edited under Input Management | Keyboard.

25.8.30.2
=========
 + Query the NVIDIA driver setting for ReBar before installing NvAPI hooks,
     to prevent rare race conditions in 32-bit application init.

25.8.30.1
=========
 + Improved Ubisoft+ and Steam platform identification.
 + Improved GOG platform detection in Unreal Engine games.

25.8.30
=======
 + Handle Steam AppId lookup for games with Unicode characters in their name.
 + Remove Trademark symbols before performing Steam AppId lookup.

25.8.29
=======
 + Download achievement lock/unlock icons for non-Steam games.
 + Augment non-Steam games with achievement rarity info from Steam.
 + Add in-game Player Count to bottom of SK's control panel for Epic/GOG/Xbox.

25.8.28.2
=========
 + Identify a game's storefront platform as (and record in INI) one of:

     Steam, Epic, GOG, Xbox, Origin, Ubisoft or Unknown

    Also include this identifier when querying achievement metadata from
      Special K's backend server in order to identify which stores are
        being used for what games.

25.8.28.1
=========
 + Remove DLSS Preset A, B, C, D, E options when users are using DLSS ver.